assets/style.css
:root {
    --color1: #2b2b3b;
    --color2: #84e1e1;
}

* {
    box-sizing: border-box;
}

header {
    display:flex;
    justify-content: space-between;
    align-items: center;
    background: var(--color1);
}

header h1 {
    color: var(--color1);
    background-color: var(--color2);
    padding: .5% .5% .5% 5%;
}

header nav {
    padding: 2% 3%;
    width: 45%;
    flex: 0 1 38em;
    font-size: 18px;
    z-index: 1;
}

header nav a {
    text-decoration: none;
    color: var(--color2);
    padding: 6%;
    position: relative;
    font-weight: bold;
}

/* Creating the line under the nav links */
header nav a::before {
    content: '';
    background-color: var(--color2);
    position: absolute;
    left: 10%;
    bottom: 25%;
    width: 80%;
    height: 4px;
    z-index: -1;
    transition: all .3s ease-in-out;
}

/* Instructing the link to change color when hovered */
header nav a:hover {
    color: var(--color1);
    transition: all .3s ease-in-out;
    z-index: 0;
}

/* Telling the line under the link how high to rise upon hover */
header nav a:hover::before {
    bottom: 25%;
    height: 45%;
}

/* Used a background image instead of an img element */
.Background-Image {
    background-image: url(./img/Background.jpeg);
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    background-size: cover;
    background-position: center;
    width: 100%;
    height: 20em;
}

.Background-Image section {
    height: 1em;
}


.Background-Image img {
    height: 85%;
    margin-left: 5em;
}

.Background-Image p {
    background-color: var(--color2);
    background-size: 1000px;
    color: var(--color1);
    margin-right: 10%;
    font-size: 40px;
    flex: 0 1 8em;
    padding: 1%;
}

/* All info boxes will share these property values */
.Infobox {
    padding: 3%;
    display: flex;
}

/* All info box headers will be designed this way */
.Infobox h2 {
    float: left;
    height: 100%;
    width: 25%;
    text-align: right;
    padding-right: 2%;
    padding-left: 10%;
    margin-top: 0%;
    color: var(--color1);
    font-size: 50px;
}

/* The sections directly under the infobox containers will be designed this way */
.Infobox > section {
    border-left: 3px solid var(--color1);
    padding: 2%;
    width: 75%;
    padding: 0% 2%;
}

/* The About Me info box p element gets special CSS */
.About-Me p {
    font-size: 20px;
    line-height: 1.5;
}

/* Work is the mostimportant info box and will get special CSS */
.Work {
    height: 80em;
}

.Work > section {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
}

/* The project boxes will share these styles. Note the saturation property. This builds to the next selector below */
.Projectbox {
    border: 5px solid var(--color2);
    flex: 0 1 48%;
    height: 20%;
    margin: 1%;
    filter: saturate(75%);
    position: relative;
}

/* Finishes the saturation effect upon hover */
.Projectbox:hover {
    filter: saturate(100%);
}

/* All class Projectbox images will share this CSS */
.Projectbox img {
    height: 100%;
    width: 100%;
}

.Projectbox section {
    width: 56%;
    color: var(--color1);
    background-color: var(--color2);
    margin: 6em 0em 0em 0em;
    padding: 0% 0% 0% 1%;
    position: absolute;
    bottom: 15%;
}

.Projectbox h3 {
    font-size: 30px;
}

.Projectbox a {
    font-size: 20px;
}

.Projectbig {
    flex: 0 1 100%;
    height: 50%;
    position: relative;
}

.Projectbig section {
    margin: 28em 0em 3em 1em;
    width: 36%;
    position: absolute;
    bottom: 7%;
}

.Contact-Me {
    height: 10%;
}

.Contact-Me section {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.Contact-Me nav {
    display: flex;
    justify-content: space-between;
    flex: 1 1 100%;
    font-size: 18px;
}

.Contact-Me a {
    color: var(--color1);
    text-decoration: none;
    position: relative;
}

/* This begins the link hover effect seen in the header nav element. Colors are inversed here. */
.Contact-Me a::before {
    content: '';
    background-color: var(--color1);
    position: absolute;
    right: -7%;
    bottom: -40%;
    width: 114%;
    height: 4px;
    z-index: -1;
    transition: all .3s ease-in-out;
}

.Contact-Me a:hover {
    color: var(--color2);
    transition: all .3s ease-in-out;
    z-index: 0;
}

.Contact-Me a:hover::before {
    height: 170%;
}

